--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
  <body>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic/chatbot.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic/voicebot.js"></script>
+<script src="chatbot.js"></script>
+<script src="voicebot.js"></script>
 </body>
 </html>
 
