--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
  <body>
 <script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/chatbot.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/voicebot.js"></script>
