--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
  <body>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/chatbot.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/voicebot.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/main.js"></script>
 </body>
 </html>
 
