--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
  <body>
     <h1>This is new one</h1>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic/main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/main.js"></script>
 </body>
 </html>
 
