--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
  <body>
     <h1>This is new one</h1>
-<script src="https://cdn.jsdelivr.net/gh/kumar045/mic@latest/main.js"></script>
-</body>
+<script src="main.js"></script>
+
+ </body>
 </html>
 
           
